tests/diagnostics/catalog/snapshots/ir/IR0009.snap
error[IR0009]: IR_E_CONST_DIVISION_BY_ZERO
 --> tests/diagnostics/catalog/sources/ir/IR0009.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0009
  = help: keep IR validation diagnostics structured and catalog-backed
